adding changes for mvn clean package and batch write